# medical-ocr-openenv

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN.md  COMPLETE_SETUP.md  COMPLIANCE_CHECKLIST.md  DEMO_PAGE_SETUP.md  DEPLOY_GUIDE.md  DEPLOY_NOW.md  DEPLOY_PERSONALIZED.md  DONE.md  Dockerfile  FILL_THIS_INFO.txt  FINAL_CHECKLIST.md  FIXED_NOW_WHAT.md  FIX_SUBMISSION_ERROR.md  HOW_TO_USE_DEMO.md  INTEGRATION_GUIDE.md  LICENSE  NEXT_STEPS.md  README.md  SETUP_INSTRUCTIONS.md  SPACE_FIX_COMMANDS.txt  START_HERE.md  SUBMISSION_STATUS.md  SUCCESS_READY_TO_SUBMIT.md  SUMMARY.txt  TEST_ENDPOINTS.bat  VIEWING_GUIDE.md  YOUR_COMMANDS.txt  demo.html  demo_interactive.py  demo_matrika.html  environment.py  generate_test_images.py  graders.py  inference.py  openenv.yaml  pyproject.toml  quick_deploy.bat  (+6 more)
server/: __init__.py  app.py
test_data/: README.md
test_data/easy/: prescription_001.json  prescription_002.json  prescription_003.json  prescription_004.json  prescription_005.json
test_data/hard/: prescription_001.json  prescription_002.json  prescription_003.json  prescription_004.json  prescription_005.json
test_data/medium/: prescription_001.json  prescription_002.json  prescription_003.json  prescription_004.json  prescription_005.json
